--- a/inventory.yml
+++ b/inventory.yml
@@ -1,7 +1,7 @@
 all:
   vars:
     ansible_user: jenkins
-    ansible_ssh_private_key_file: /var/lib/jenkins/.ssh/id_rsa
+    ansible_ssh_private_key_file: /home/jenkins/.ssh/id_rsa
     registry_ip: 192.168.50.4
     registry_port: 5000
     image_tag: latest
