--- a/deploy_app.yml
+++ b/deploy_app.yml
@@ -1,4 +1,21 @@
 ---
+- hosts: all
+  become: true
+  tasks:
+    - name: Ensure Python dependencies for Ansible modules
+      apt:
+        name:
+          - python3
+          - python3-distutils
+          - python3-apt
+        state: present
+      when: ansible_os_family == "Debian"
+
+    - name: Ensure packaging module
+      pip:
+        name: packaging
+        state: latest
+
 - name: Deploy Healthify stack from staging registry
   hosts: swarm_manager
   become: yes
