--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,6 @@ inventory = inventory.yml
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings = False
+
+# Force temp dir into /tmp so jenkins home perms don't matter
+remote_tmp = /tmp/.ansible-${USER}
