--- a/prep_nodes.yml
+++ b/prep_nodes.yml
@@ -2,17 +2,22 @@
 - hosts: all
   become: true
   tasks:
-    - name: Ensure Python + pip for Ansible
+    - name: Ensure Python + pip + stdlib for Ansible
       apt:
         name:
           - python3
           - python3-pip
           - python3-distutils
+          - python3-setuptools       # <-- Adds distutils.version, LooseVersion, StrictVersion
+          - python3-apt               # <-- Needed for apt_* modules
         state: present
       when: ansible_os_family == "Debian"
 
-    - name: Ensure packaging module
+    - name: Ensure packaging module (modern version parsing)
       pip:
         name: packaging
         state: latest
         executable: pip3
+
+    - name: Verify distutils.version is available
+      command: python3 -c "from distutils.version import StrictVersion; print('StrictVersion OK')"
