--- a/prep_nodes.yml
+++ b/prep_nodes.yml
@@ -2,14 +2,14 @@
 - hosts: all
   become: true
   tasks:
-    - name: Ensure Python + pip + stdlib for Ansible
+    - name: Ensure Python + pip + version support
       apt:
         name:
           - python3
           - python3-pip
           - python3-distutils
-          - python3-setuptools       # <-- Adds distutils.version, LooseVersion, StrictVersion
-          - python3-apt               # <-- Needed for apt_* modules
+          - python3-setuptools    # <-- This is the missing piece
+          - python3-apt
         state: present
       when: ansible_os_family == "Debian"
 
