--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,5 @@
 [defaults]
-inventory = inventory.yml
+inventory = ./hosts
+remote_user = jenkins
 host_key_checking = False
 retry_files_enabled = False
-deprecation_warnings = False
-
-# Force temp dir into /tmp so jenkins home perms don't matter
-remote_tmp = /tmp/.ansible-${USER}
