--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -1,4 +1,4 @@
-version: "3.2"
+version: "3.8"
 
 services:
   postgres:
@@ -14,6 +14,13 @@ services:
     deploy:
       placement:
         constraints: [node.role == manager]
+      restart_policy:
+        condition: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     image: 192.168.50.4:5000/healthify-backend:latest
@@ -27,10 +34,10 @@ services:
       EXPIRES_IN: 24h
     ports:
       - "5050:5050"
-    depends_on:
-      - postgres
     networks:
       - healthify_net
+    depends_on:
+      - postgres
     deploy:
       replicas: 2
       restart_policy:
@@ -38,17 +45,22 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5050/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   frontend:
     image: 192.168.50.4:5000/healthify-frontend:latest
     environment:
-      - API_BASE_URL=http://192.168.50.4:5050/api/
+      API_BASE_URL: http://192.168.50.4:5050/api/
     ports:
       - "5173:5173"
-    depends_on:
-      - backend
     networks:
       - healthify_net
+    depends_on:
+      - backend
     deploy:
       replicas: 2
       restart_policy:
@@ -56,10 +68,14 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5173 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata:
 
 networks:
-  healthify_net:
-    driver: overlay
+  health
