--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.2"
 
 services:
   postgres:
@@ -54,7 +54,7 @@ services:
   frontend:
     image: 192.168.50.4:5000/healthify-frontend:latest
     environment:
-      API_BASE_URL: http://192.168.50.4:5050/api/
+      API_BASE_URL: http://192.168.50.4:5050
     ports:
       - "5173:5173"
     networks:
