--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -46,7 +46,7 @@ services:
         parallelism: 1
         delay: 10s
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5050/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:5050 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
