--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -26,6 +26,7 @@ services:
     image: 192.168.50.4:5000/healthify-backend:latest
     environment:
       PORT: 5050
+      HOST: 0.0.0.0
       DB_HOST: postgres
       DB_USER: postgres
       DB_PASSWORD: postgres
@@ -36,8 +37,6 @@ services:
       - "5050:5050"
     networks:
       - healthify_net
-    depends_on:
-      - postgres
     deploy:
       replicas: 2
       restart_policy:
@@ -46,7 +45,7 @@ services:
         parallelism: 1
         delay: 10s
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5050 || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:5050/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -54,13 +53,11 @@ services:
   frontend:
     image: 192.168.50.4:5000/healthify-frontend:latest
     environment:
-      API_BASE_URL: http://192.168.50.4:5050
+      API_BASE_URL: http://192.168.50.4:5050/api
     ports:
       - "5173:5173"
     networks:
       - healthify_net
-    depends_on:
-      - backend
     deploy:
       replicas: 2
       restart_policy:
