--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -12,8 +12,7 @@ services:
     networks:
       - healthify_net
     deploy:
-      placement:
-        constraints: [node.role == manager]
+      replicas: 1
       restart_policy:
         condition: on-failure
     healthcheck:
@@ -32,8 +31,6 @@ services:
       DB_NAME: healthify
       JWT_SECRET: healthify
       EXPIRES_IN: 24h
-    ports:
-      - "5050:5050"
     networks:
       - healthify_net
     depends_on:
@@ -42,6 +39,13 @@ services:
       replicas: 2
       restart_policy:
         condition: on-failure
+      placement:
+        constraints: []  # can run on any node
+    ports:
+      - target: 5050
+        published: 5050
+        protocol: tcp
+        mode: host  # published on all nodes
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5050/health || exit 1"]
       interval: 30s
@@ -51,9 +55,7 @@ services:
   frontend:
     image: healthify-frontend:latest
     environment:
-      API_BASE_URL: http://192.168.40.4:5050/api
-    ports:
-      - "5173:5173"
+      API_BASE_URL: http://backend:5050/api
     networks:
       - healthify_net
     depends_on:
@@ -62,9 +64,16 @@ services:
       replicas: 2
       restart_policy:
         condition: on-failure
+      placement:
+        constraints: []
       update_config:
         parallelism: 1
         delay: 10s
+    ports:
+      - target: 5173
+        published: 5173
+        protocol: tcp
+        mode: host  # published on all nodes
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5173 || exit 1"]
       interval: 30s
