--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -55,7 +55,7 @@ services:
   frontend:
     image: 192.168.50.4:5000/healthify-frontend:latest
     environment:
-      API_BASE_URL: http://backend:5050/api
+      API_BASE_URL: http://192.168.50.4:5050/api
     networks:
       - healthify_net
     depends_on:
