--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -15,6 +15,9 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
+      placement:
+        constraints:
+          - node.role == manager  # Postgres runs only on manager
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 30s
@@ -65,7 +68,7 @@ services:
       restart_policy:
         condition: on-failure
       placement:
-        constraints: []
+        constraints: []  # can run on any node
       update_config:
         parallelism: 1
         delay: 10s
