--- a/deploy-monitoring.yml
+++ b/deploy-monitoring.yml
@@ -10,16 +10,22 @@
         group: jenkins
         mode: '0755'
 
-    - name: Copy monitoring.yml to manager
-      copy:
-        src: "HealthifyProductionPipeline/stack/prometheus/monitoring.yml"
-        dest: /home/jenkins/monitoring-stack/monitoring.yml
-        owner: jenkins
-        group: jenkins
-        mode: '0644'
+    - name: Show playbook directory
+      debug:
+        msg: "Playbook is running from {{ playbook_dir }}"
 
-    - name: Deploy monitoring stack
-      shell: pwd
-      shell: docker stack deploy -c /home/jenkins/monitoring-stack/monitoring.yml monitoring
-      args:
-        warn: false
+
+    # - name: Copy monitoring.yml to manager
+    #   copy:
+    #     src: "HealthifyProductionPipeline/stack/prometheus/monitoring.yml"
+    #     dest: /home/jenkins/monitoring-stack/monitoring.yml
+    #     owner: jenkins
+    #     group: jenkins
+    #     mode: '0644'
+
+
+    # - name: Deploy monitoring stack
+    #   shell: pwd
+    #   shell: docker stack deploy -c /home/jenkins/monitoring-stack/monitoring.yml monitoring
+    #   args:
+    #     warn: false
