debug - directory of stack

--- a/deploy.yml
+++ b/deploy.yml
@@ -54,7 +54,7 @@
 
     - name: Copy monitoring.yml to manager
       copy:
-        src: ./stack/prometheus/monitoring.yml
+        src: ./stack/monitoring.yml
         dest: /home/jenkins/monitoring-stack/monitoring.yml
         owner: jenkins
         group: jenkins
