--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -4,9 +4,9 @@ services:
   prometheus:
     image: prom/prometheus:v2.51.2
     configs:
-      - source: prometheus.yml
+      - source: ./prometheus/prometheus.yml
         target: /etc/prometheus/prometheus.yml
-      - source: alert.rules.yml
+      - source: ./prometheus/alert.rules.yml
         target: /etc/prometheus/alert.rules.yml
     networks:
       - healthify_net
