--- a/deploy.yml
+++ b/deploy.yml
@@ -40,11 +40,11 @@
       debug:
         var: deploy_result.stdout_lines
 
-- name: Deploy Monitoring Stack from Manager
+- name: Deploy Monitoring Stack
   hosts: manager
   become: yes
   tasks:
-    - name: Create Monitoring deployment directory
+    - name: Create deployment directory
       file:
         path: /home/jenkins/monitoring-stack
         state: directory
@@ -52,42 +52,50 @@
         group: jenkins
         mode: '0755'
 
+    - name: Show playbook directory
+      debug:
+        msg: "Playbook is running from {{ playbook_dir }}"
+
     - name: Copy monitoring.yml to manager
       copy:
-        src: ./stack/monitoring.yml
+        src: "./stack/monitoring.yml"
         dest: /home/jenkins/monitoring-stack/monitoring.yml
         owner: jenkins
         group: jenkins
         mode: '0644'
 
-    - name: Copy prometheus.yml config
+    - name: Copy prometheus.yml config to manager
       copy:
-        src: ./stack/prometheus/prometheus.yml
+        src: "./stack/prometheus/prometheus.yml"
         dest: /home/jenkins/monitoring-stack/prometheus.yml
         owner: jenkins
         group: jenkins
         mode: '0644'
 
-    - name: Copy alert.rules.yml
+    - name: Copy alert.rules.yml config to manager
       copy:
-        src: ./stack/prometheus/alert.rules.yml
+        src: "./stack/prometheus/alert.rules.yml"
         dest: /home/jenkins/monitoring-stack/alert.rules.yml
         owner: jenkins
         group: jenkins
         mode: '0644'
 
-    - name: Ensure overlay network 'healthify_net' exists
-      shell: docker network inspect healthify_net || docker network create --driver overlay healthify_net
+    - name: Ensure Prometheus config exists
+      shell: |
+        docker config inspect prometheus.yml >/dev/null 2>&1 || \
+        docker config create prometheus.yml /home/jenkins/monitoring-stack/prometheus.yml
       args:
-        warn: false
+        executable: /bin/bash
 
-    - name: Deploy Monitoring stack
+    - name: Ensure Alert rules config exists
+      shell: |
+        docker config inspect alert.rules.yml >/dev/null 2>&1 || \
+        docker config create alert.rules.yml /home/jenkins/monitoring-stack/alert.rules.yml
+      args:
+        executable: /bin/bash
+
+    - name: Deploy monitoring stack
       shell: docker stack deploy -c /home/jenkins/monitoring-stack/monitoring.yml monitoring
       args:
+        executable: /bin/bash
         warn: false
-      register: monitoring_result
-      changed_when: "'Updating' in monitoring_result.stdout or 'Creating' in monitoring_result.stdout"
-
-    - name: Display Monitoring deployment output
-      debug:
-        var: monitoring_result.stdout_lines
