--- a/stack/prometheus/prometheus.yml
+++ b/stack/prometheus/prometheus.yml
@@ -7,20 +7,20 @@ rule_files:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["prometheus:9090"]
+      - targets: ["192.168.50.4:9090"]
 
   - job_name: "backend"
     static_configs:
-      - targets: ["backend:5050"]
+      - targets: ["192.168.50.4:5050"]
 
   - job_name: "frontend"
     static_configs:
-      - targets: ["frontend:5173"]
+      - targets: ["192.168.50.4:5173"]
 
   - job_name: "node"
     static_configs:
-      - targets: ["node-exporter:9100"]
+      - targets: ["192.168.50.4:9100"]
 
-  - job_name: "cadvisor"
+  - job_name: "postgres"
     static_configs:
-      - targets: ["cadvisor:8080"]
+      - targets: ["192.168.50.4:9187"]
