--- a/deploy.yml
+++ b/deploy.yml
@@ -76,19 +76,28 @@
         group: jenkins
         mode: '0644'
 
-    - name: Ensure Prometheus config exists
-      shell: |
-        docker config inspect prometheus.yml >/dev/null 2>&1 || \
-        docker config create prometheus.yml /home/jenkins/monitoring-stack/prometheus.yml
+    - name: Remove existing Prometheus config (if any)
+      shell: docker config rm prometheus.yml || true
+      args:
+        executable: /bin/bash
+      ignore_errors: true
+
+    - name: Create fresh Prometheus config
+      shell: docker config create prometheus.yml /home/jenkins/monitoring-stack/prometheus.yml
       args:
         executable: /bin/bash
 
-    - name: Ensure Alert rules config exists
-      shell: |
-        docker config inspect alert.rules.yml >/dev/null 2>&1 || \
-        docker config create alert.rules.yml /home/jenkins/monitoring-stack/alert.rules.yml
+    - name: Remove existing Alert rules config (if any)
+      shell: docker config rm alert.rules.yml || true
       args:
         executable: /bin/bash
+      ignore_errors: true
+
+    - name: Create fresh Alert rules config
+      shell: docker config create alert.rules.yml /home/jenkins/monitoring-stack/alert.rules.yml
+      args:
+        executable: /bin/bash
+
 
     - name: Deploy monitoring stack
       shell: docker stack deploy -c /home/jenkins/monitoring-stack/monitoring.yml monitoring
