--- a/deploy.yml
+++ b/deploy.yml
@@ -40,11 +40,11 @@
       debug:
         var: deploy_result.stdout_lines
 
-- name: Deploy Monitoring Stack
+- name: Deploy Monitoring Stack with Config Overwrite
   hosts: manager
   become: yes
   tasks:
-    - name: Create deployment directory
+    - name: Create monitoring deployment directory
       file:
         path: /home/jenkins/monitoring-stack
         state: directory
@@ -76,7 +76,19 @@
         group: jenkins
         mode: '0644'
 
-    - name: Remove existing Prometheus config (if any)
+    - name: Remove monitoring stack (to release configs)
+      shell: docker stack rm monitoring || true
+      args:
+        executable: /bin/bash
+      ignore_errors: true
+
+    - name: Wait for stack removal to complete
+      shell: |
+        while docker stack services monitoring 2>/dev/null | grep -q .; do sleep 2; done
+      args:
+        executable: /bin/bash
+
+    - name: Remove existing Prometheus config
       shell: docker config rm prometheus.yml || true
       args:
         executable: /bin/bash
@@ -87,7 +99,7 @@
       args:
         executable: /bin/bash
 
-    - name: Remove existing Alert rules config (if any)
+    - name: Remove existing Alert rules config
       shell: docker config rm alert.rules.yml || true
       args:
         executable: /bin/bash
@@ -97,7 +109,6 @@
       shell: docker config create alert.rules.yml /home/jenkins/monitoring-stack/alert.rules.yml
       args:
         executable: /bin/bash
-
 
     - name: Deploy monitoring stack
       shell: docker stack deploy -c /home/jenkins/monitoring-stack/monitoring.yml monitoring
