--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -4,11 +4,10 @@ services:
   prometheus:
     image: prom/prometheus:v2.51.2
     configs:
-    - source: prometheus.yml
-      target: /etc/prometheus/prometheus.yml
-    - source: alert.rules.yml
-      target: /etc/prometheus/alert.rules.yml
-
+      - source: prometheus.yml
+        target: /etc/prometheus/prometheus.yml
+      - source: alert.rules.yml
+        target: /etc/prometheus/alert.rules.yml
     networks:
       - healthify_net
     ports:
@@ -57,6 +56,22 @@ services:
       - postgres
     deploy:
       replicas: 1
+      restart_policy:
+        condition: on-failure
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - healthify_net
+    ports:
+      - "8080:8080"
+    deploy:
+      mode: global
       restart_policy:
         condition: on-failure
 
