--- a/stack/prometheus/alert.rules.yml
+++ b/stack/prometheus/alert.rules.yml
@@ -7,5 +7,5 @@ groups:
         labels:
           severity: critical
         annotations:
-          summary: "Instance {{ $labels.instance }} down"
-          description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minute."
+          summary: "Instance {{ $labels.instance }} is down"
+          description: "The instance {{ $labels.instance }} in job {{ $labels.job }} has been unreachable for more than 1 minute."
