--- a/stack/prometheus/prometheus.yml
+++ b/stack/prometheus/prometheus.yml
@@ -7,20 +7,28 @@ rule_files:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["192.168.50.4:9090"]
+      - targets: ["localhost:9090"]
 
   - job_name: "backend"
     static_configs:
-      - targets: ["192.168.50.4:5050"]
+      - targets: ["backend:5050"]
 
   - job_name: "frontend"
     static_configs:
-      - targets: ["192.168.50.4:5173"]
+      - targets: ["frontend:5173"]
 
   - job_name: "node"
-    static_configs:
-      - targets: ["192.168.50.4:9100"]
+    dns_sd_configs:
+      - names: ["tasks.node-exporter"]
+        type: A
+        port: 9100
 
   - job_name: "postgres"
     static_configs:
-      - targets: ["192.168.50.4:9187"]
+      - targets: ["postgres-exporter:9187"]
+
+  - job_name: "cadvisor"
+    dns_sd_configs:
+      - names: ["tasks.cadvisor"]
+        type: A
+        port: 8080
