--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -24,6 +24,11 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
     volumes:
       - grafana_data:/var/lib/grafana
+      - /home/jenkins/monitoring-stack/grafana.yml:/etc/grafana/provisioning/grafana.yml
+      - /home/jenkins/monitoring-stack/dashboards:/var/lib/grafana/dashboards
+    configs:
+      - source: grafana.yml
+        target: /etc/grafana/provisioning/grafana.yml
     networks:
       - healthify_net
     ports:
@@ -86,4 +91,6 @@ configs:
   prometheus.yml:
     external: true
   alert.rules.yml:
+    external: true
+  grafana.yml:
     external: true
