--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -25,7 +25,8 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - /home/jenkins/monitoring-stack/grafana.yml:/etc/grafana/provisioning/grafana.yml
-      - /home/jenkins/monitoring-stack/dashboards:/var/lib/grafana/dashboards
+      - /home/jenkins/monitoring-stack/grafana.yml:/etc/grafana/provisioning/dashboards/grafana.yml
+
   
     networks:
       - healthify_net
@@ -90,5 +91,4 @@ configs:
     external: true
   alert.rules.yml:
     external: true
-  grafana.yml:
-    external: true
+
